<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hosts Editor</string>

    <!-- Action bar menu -->
    <string name="action_search">Search</string>
    <string name="action_search_results">Search results</string>
    <string name="action_add_host">Add Host</string>
    <string name="action_reload">Reload host entries</string>
    <string name="action_select_all">Select all hosts</string>
    <string name="action_about">About</string>

    <!-- Add/Edit host -->
    <string name="add_host_title">Add Hostname</string>
    <string name="edit_host_title">Edit Hostname</string>
    <string name="add_edit_ip">IP Address:</string>
    <string name="add_edit_name">Hostname:</string>
    <string name="add_edit_comment">Comment:</string>
    <string name="add_edit_error_title">Error</string>
    <string name="add_edit_error_ip">IP address is invalid</string>
    <string name="add_edit_error_hostname">Hostname is invalid</string>
    <string name="add_edit_error_ok">OK</string>

    <!-- Add/Edit host menu -->
    <string name="action_add_comment">Add comment</string>
    <string name="action_remove_comment">Remove comment</string>

    <!-- List hosts (empty layout) -->
    <string name="list_empty">No \'hosts\' records found.</string>
    <string name="list_empty_desc">We couldn\'t find any host entry.\nFeel free to add some!</string>

    <!-- List hosts (contextual menu) -->
    <string name="list_menu_selected">%d selected</string>
    <string name="list_menu_edit">Edit</string>
    <string name="list_menu_delete">Delete</string>
    <string name="list_menu_toggle">Toggle</string>

    <!-- List hosts error dialog -->
    <string name="list_error_title">Error</string>
    <string name="list_error_content">Can\'t edit hosts file, make sure you have root/SuperUser rights.\nThe app should be allowed to request super user access.</string>
    <string name="list_error_ok">OK</string>

    <!-- Delete confirmation dialog -->
    <string name="delete_dialog_title">Delete</string>
    <plurals name="delete_dialog_content">
        <item quantity="one">Delete selected host?</item>
        <item quantity="other">Delete selected hosts?</item>
    </plurals>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="delete_dialog_delete">Delete</string>

    <!-- Loading messages -->
    <string name="loading_hosts">Loading host entries</string>
    <string name="loading_add">Adding entry</string>
    <string name="loading_edit">Editing entry</string>
    <string name="loading_remove_single">Removing entry</string>
    <string name="loading_remove_multiple">Removing entries</string>
    <string name="loading_toggle_single">Toggling entry</string>
    <string name="loading_toggle_multiple">Toggling entries</string>

    <!-- About -->
    <string name="about_title">About Hosts Editor</string>
    <string name="about_text">This app lets you modify your /etc/hosts file on Android.\nYou might need to reboot to clear your DNS cache after any change.</string>
    <string name="about_author">2013 &#8211; 2014\n<a href="http://www.nilhcem.com">http://www.nilhcem.com</a></string>
    <string name="about_github_button">GitHub</string>
</resources>
