<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Search -->
    <item
        android:id="@+id/action_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|withText|collapseActionView"
        android:title="@string/action_search"/>

    <!-- Add host -->
    <item
        android:id="@+id/action_add_host"
        android:icon="@drawable/ic_action_add_dark"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_add_host"/>

    <!-- Reload -->
    <item
        android:id="@+id/action_reload_hosts"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="never|withText"
        android:title="@string/action_reload"/>

    <!-- Select all -->
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_menu_mark"
        android:showAsAction="never|withText"
        android:title="@string/action_select_all"/>

    <!-- About -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_menu_info_details"
        android:showAsAction="never|withText"
        android:title="@string/action_about"/>
</menu>
