<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Content -->
        <com.nilhcem.hostseditor.ui.widget.TypefacedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textSize="16sp"
            app:typeface="fonts/Roboto-Regular.ttf"/>

        <!-- GitHub button -->
        <com.nilhcem.hostseditor.ui.widget.TypefacedButton
            android:id="@+id/aboutGitHub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/about_github_button"
            app:typeface="fonts/Roboto-Regular.ttf"/>

        <!-- Date - Author -->
        <com.nilhcem.hostseditor.ui.widget.TypefacedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/about_author"
            app:typeface="fonts/Roboto-Italic.ttf"/>
    </LinearLayout>
</ScrollView>
