<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- IP (label) -->
        <com.nilhcem.hostseditor.ui.widget.TypefacedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_ip"
            android:textSize="@dimen/add_edit_label_size"
            app:typeface="fonts/Roboto-Regular.ttf"/>

        <!-- IP (input) -->
        <EditText
            android:id="@+id/addEditHostIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/add_edit_form_margin"
            android:digits="0123456789abcdefABCDEF.:"
            android:ems="10"
            android:inputType="textNoSuggestions">

            <requestFocus/>
        </EditText>

        <!-- Hostname (label) -->
        <com.nilhcem.hostseditor.ui.widget.TypefacedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_name"
            android:textSize="@dimen/add_edit_label_size"
            app:typeface="fonts/Roboto-Regular.ttf"/>

        <!-- Hostname (input) -->
        <EditText
            android:id="@+id/addEditHostName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/add_edit_form_margin"
            android:ems="10"
            android:inputType="textNoSuggestions"/>

        <!-- Comment (label) - hidden by default -->
        <com.nilhcem.hostseditor.ui.widget.TypefacedTextView
            android:id="@+id/addEditCommentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_comment"
            android:textSize="@dimen/add_edit_label_size"
            android:visibility="gone"
            app:typeface="fonts/Roboto-Regular.ttf"
            tools:visibility="visible"/>

        <!-- Comment (input) - hidden by default -->
        <EditText
            android:id="@+id/addEditComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/add_edit_form_margin"
            android:ems="10"
            android:inputType="text"
            android:visibility="gone"
            tools:visibility="visible"/>

        <!-- "Add/Edit Host" Button -->
        <com.nilhcem.hostseditor.ui.widget.TypefacedButton
            android:id="@+id/addEditHostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_action_add_dark"
            android:drawablePadding="8dp"
            app:typeface="fonts/Roboto-Light.ttf"
            tools:text="@string/add_host_title"/>
    </LinearLayout>
</ScrollView>
